--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li>Services</li>
             <li>Conatct</li>
         </nav>
+        <img src="./img/geekfolio.webp" width="300px" alt="">
     </header>
 </body>
 
