--- a/index.html
+++ b/index.html
@@ -10,15 +10,30 @@
 
 <body>
     <header>
-        <h3>Digital Agency</h3>
-        <nav>
-            <li>Home</li>
-            <li>About</li>
-            <li>Services</li>
-            <li>Conatct</li>
-        </nav>
-        <img src="./img/geekfolio.webp" width="300px" alt="">
+     <div class="nav-container">
+        <div class="logo">
+            <img src="./asset/logo/logo.png" alt="">
+        </div>
+        <div class="menus">
+            <li class="menu">Home</li>
+            <li class="menu">About</li>
+            <li class="menu">Services</li>
+            <li class="menu">Contact Us</li>
+        </div>
+     </div>
+     <div class="banner-container">
+        <div class="banner-info">
+            <h1 class="banner-title"><span class="primary">Digital</span> Agency <br> You <br> Can Rely Uopn !</h1>
+        <p class="banner-desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore accusantium quis minima quo temporibus ab. Inventore accusantium quis minima quo temporibus ab.</p>
+        <button class="btn-primary">Discover me</button>
+        <button class="btn-primary-2">Hire Us Now</button>
+        </div>
+        </div>
+     </div>
     </header>
+
+    <main></main>
+    <footer></footer>
 </body>
 
 </html>
