--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
      </div>
      <div class="banner-container">
         <div class="banner-info">
-            <h1 class="banner-title"><span class="primary">Digital</span> Agency <br> You <br> Can Rely Uopn !</h1>
-        <p class="banner-desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore accusantium quis minima quo temporibus ab. Inventore accusantium quis minima quo temporibus ab.</p>
+            <h1 class="title"><span class="primary">Digital</span> Agency <br> You <br> Can Rely Uopn !</h1>
+        <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore accusantium quis minima quo temporibus ab. Inventore accusantium quis minima quo temporibus ab.</p>
         <button class="btn-primary">Discover me</button>
         <button class="btn-primary-2">Hire Us Now</button>
         </div>
@@ -32,7 +32,55 @@
      </div>
     </header>
 
-    <main></main>
+    <main>
+        <!-- services -->
+        <section>
+        <div class="services-container">
+            <div class="left-side-container">
+                <button class="author-btn">Hire us now</button>
+                <h2 class="title"> <span class="primary">Services</span> we can help you with !</h2>
+                <p  class="service-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nisi, reiciendis quis nihil officiis unde!Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nisi, reiciendis quis nihil officiis unde!</p>
+               <ol>
+                <li class="sub-desc">Lorem ipsum dolor sit amet consectetur.</li>
+                <li class="sub-desc">Lorem ipsum dolor sit amet consectetur.</li>
+               </ol>
+               <div class="author-container">
+                <div class="author-profile">
+                    <img  src="./asset/image/author.jpg" alt="">
+                    <h3 class="author-info">Geroge smith <br>
+                        <small>CEO Director</small></h3>
+             
+                </div>
+                <div class="author-btn">
+                    <button class="author-btn-2">More Details</button>
+                </div>
+               </div>
+            </div>
+            <div class="right-side-container">
+              <div class="first-two-box">
+                <div class="box">
+                    <img class="box-img" src="./asset/icons/bar-chart.png" alt="">
+                    <h2 class="box-title">Web Develeopment</h2>
+                </div>
+                <div class="box">
+                    <img class="box-img" src="./asset/icons/bar-chart.png" alt="">
+                    <h2 class="box-title">Web Develeopment</h2>
+                </div>
+              </div>
+              <div class="first-two-box">
+                <div class="box">
+                    <img class="box-img" src="./asset/icons/bar-chart.png" alt="">
+                    <h2 class="box-title">Web Develeopment</h2>
+                </div>
+                <div class="box">
+                    <img class="box-img" src="./asset/icons/bar-chart.png" alt="">
+                    <h2 class="box-title">Web Develeopment</h2>
+                </div>
+              </div>
+            </div>
+        </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
