--- a/index.html
+++ b/index.html
@@ -80,6 +80,22 @@
             </div>
         </div>
         </section>
+        <!-- appoinment -->
+        <div class="appointment-container">
+            <div class="appointment-contact">
+                <img src="./asset/icons/phone-call.png" alt="">
+                <h3 class="appointment-info">
+                    <small>Get a free consultation </small><br> 32428463
+                </h3>
+              
+            </div>
+            <div class="appointment-desc">
+                <p class="appointment-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae quisquam quo ab suscipit sint exercitationem vero esse repellendus corporis. Qui necessitatibus cum incidunt enim! Quasi molestias ducimus sunt quae in aperiam?</p>
+            </div>
+            <div class="appointment-btn">
+                <button class="author-btn-2">Make An Appointment</button>
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
