--- a/index.html
+++ b/index.html
@@ -96,6 +96,30 @@
                 <button class="author-btn-2">Make An Appointment</button>
             </div>
         </div>
+
+        <!-- blog -->
+       <section>
+        <h2 class="blog-title"> <span class="primary">Blogs</span> And News From Us !</h2>
+        <p class="blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum blanditiis atque ex,<br> iste vel facilis fugiat eum pariatur ad asperiores eligendi odit, enim quae dolor.</p>
+        <div class="blog-container">
+            
+            <div class="blog-card">
+                <img src="./asset/image/blog-1.jpg" alt="">
+                <h2 class="card-title">Lorem ipsum dolor sit.</h2>
+                <p class="card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam nisi consequatur, reiciendis quas eum quasi.....</p>
+            </div>
+            <div class="blog-card">
+                <img src="./asset/image/blog-1.jpg" alt="">
+                <h2 class="card-title">Lorem ipsum dolor sit.</h2>
+                <p class="card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam nisi consequatur, reiciendis quas eum quasi.....</p>
+            </div>
+            <div class="blog-card">
+                <img src="./asset/image/blog-1.jpg" alt="">
+                <h2 class="card-title">Lorem ipsum dolor sit.</h2>
+                <p class="card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam nisi consequatur, reiciendis quas eum quasi.....</p>
+            </div>
+        </div>
+       </section>
     </main>
     <footer></footer>
 </body>
