--- a/index.html
+++ b/index.html
@@ -121,7 +121,34 @@
         </div>
        </section>
     </main>
-    <footer></footer>
+    <footer >
+        <div class="footer-container">
+            <div class="footer-content">
+                <h2 class="footer-logo">AGENCE</h2>
+                <p class="footer-desc">Lorem ipsum dolor sit amet <br> consectetur, adipisicing elit. Veniam, vel.</p>
+            </div>
+            <div class="footer-content">
+                <h2 class="footer-logo">Useful Links</h2>
+                <h4 class="sub-content">About us</h4>
+                <h4 class="sub-content">Carrers</h4>
+                <h4 class="sub-content">News & Articlies</h4>
+                <h4 class="sub-content">Legal Notice</h4>
+            </div>
+            <div class="footer-content">
+                <h2 class="footer-logo">Supports</h2>
+                <h4 class="sub-content">Help Center</h4>
+                <h4 class="sub-content">Contact Us</h4>
+                <h4 class="sub-content">FAQ</h4>
+                <h4 class="sub-content">Parent Community</h4>
+            </div>
+            <div class="footer-content">
+                <h2 class="footer-logo">Contact Information</h2>
+                <h4 class="sub-content">Baridhara ,Dhaka ,Bangladesh</h4>
+                <h4 class="sub-content">+1223249348934</h4>
+                <h4 class="sub-content">geekfolio@gmail.com</h4>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
