--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <footer >
         <div class="footer-container">
             <div class="footer-content">
-                <h2 class="footer-logo">AGENCE</h2>
+                <img src="./asset/logo/logo.png" alt="">
                 <p class="footer-desc">Lorem ipsum dolor sit amet <br> consectetur, adipisicing elit. Veniam, vel.</p>
             </div>
             <div class="footer-content">
